# FastAPI-MongoDB-Docker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: database.py  helpers.py  main.py  templates.json
api/config_data/: dirs.py
mongodb/: Dockerfile  init-script.js
tests/: conftest.py  test_integration.py
