[tool.poetry]
name = "fastapi-mongodb"
version = "0.1.0"
description = ""
authors = ["Yuhen Liubimov <yauhenliubimau@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_mongodb"}]

[tool.poetry.dependencies]
python = "^3.10"
motor = "^3.3.2"
environs = "^9.5.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.7.0"

[tool.mypy]
cache_dir = ".venv/mypy/"
exclude = [
    ".idea",
    ".vscode",
    ".venv",
    "mongo_express",
    "mongodb"
]
pretty = true
python_version = "3.10"

[tool.black]
line-length = 79
target-version = ["py310"]
include = '^.+\.pyi?$'
extend-exclude = '''
(
    .*\.venv.* |
    .*\.idea.* |
    .*\.vscode.* |
    .*\database.*
)
'''


[tool.isort]
force_single_line = true
line_length = 79
multi_line_output = 3
profile = "black"
skip = [
    ".venv",
    "mongo_express",
    "mongodb"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
